--- a/OnePiece/Info.plist
+++ b/OnePiece/Info.plist
@@ -72,6 +72,15 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>yourserver.com</key>
+			<dict>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 			<key>qq.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
