--- a/OnePiece/Info.plist
+++ b/OnePiece/Info.plist
@@ -127,6 +127,8 @@
 	<string>是否允许此App访问你的媒体资料库？</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>ChalkboardSE.ttc</string>
+		<string>BaoliSCRegular.ttf</string>
 		<string>vrinda.ttf</string>
 		<string>Vani.ttf</string>
 		<string>Hakuu.ttf</string>
